# Faithful

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  main.cpp
assets/: CMakeLists.txt  README.md  assets_info.txt
cmake/: CompilerClang.cmake  CompilerClangOrGCC.cmake  CompilerMSVS.cmake  CompilerUNIX.cmake  ConfigAssetsPaths.cmake  ConfigClangTidy.cmake  ConfigPaths.cmake  CopyExternalLicenses.cmake  CopyLicenses.cmake  FaithfulFunctions.cmake  FindAssimp.cmake  FindAstcenc.cmake  FindCgltf.cmake  FindCurl.cmake  FindDeps.cmake  FindDepsAssetDownloader.cmake  FindDepsAssetProcessor.cmake  FindDepsMain.cmake  FindExternalMacros.cmake  FindFreetype.cmake  FindGLFW.cmake  FindGlad.cmake  (+9 more)
src/: .clang-tidy  CMakeLists.txt  Engine.cpp  Engine.h  MainRunLoop.cpp  MainRunLoop.h  Scene.cpp  Scene.h  main.cpp
src/collision/: Aabb.h  Bvh.cpp  Bvh.h  Collision.h  CollisionArea.cpp  CollisionArea.h  CollisionManager.cpp  CollisionManager.h  CollisionTarget.h  Shapes.h  shapes.md
src/common/: Animation.cpp  Animation.h  BaseGeometry.h  CollisionManager.cpp  CollisionManager.h  DrawManager.cpp  DrawManager.h  Font.h  FrameRate.h  GlfwWindowUserPointer.cpp  GlfwWindowUserPointer.h  GlobalState.h  GlobalStateAwareBase.h  GlobalStateInfo.cpp  GlobalStateInfo.h  IGameManager.h  InputManager.h  LoadingManager.cpp  LoadingManager.h  Material.h  Object.cpp  Object.h  OpenGlContextAwareBase.h  RefCounter.h  TransformableObject.cpp  TransformableObject.h  UpdateManager.cpp  UpdateManager.h
src/entities/: Ambient.cpp  Ambient.h  BaseGeometry.h  Boss.h  DestructibleObject.cpp  DestructibleObject.h  Enemy.h  EntityTraits.h  Furniture.cpp  Furniture.h  Gui.h  Loot.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  NPC.h  Npc.h  Object.cpp  Object.h  Objects_2d.cpp  Objects_2d.h  Objects_3d.cpp  Objects_3d.h  Obstacle.h  PeacefulCreature.cpp  PeacefulCreature.h  PhenomenonArea.cpp  PhenomenonArea.h  PickableItem.h  REDME.md  TerrainObject.cpp  TerrainObject.h
src/entities/common/: AnimationNode.cpp  AnimationNode.h  RunningAnimation.cpp  RunningAnimation.h
src/environment/: Biome.cpp  Biome.h  CubeMap.cpp  CubeMap.h  Environment.cpp  Environment.h  Liquid.cpp  Liquid.h  Map.cpp  Map.h  PhenomenonArea.h  Sky.h  Terrain.h  Vegetation.cpp  Vegetation.h  Weather.h
src/executors/: AudioContext.cpp  AudioContext.h  AudioThreadPool.cpp  AudioThreadPool.h  CollisionThreadPool.cpp  CollisionThreadPool.h  DisplayInteractionThreadPool.cpp  DisplayInteractionThreadPool.h  ExecutionEnvironment.cpp  ExecutionEnvironment.h  Executor.h  GameLogicThreadPool.cpp  GameLogicThreadPool.h  IExecutor.h  LeadThread.cpp  LeadThread.h  README.md  RenderThreadPool.cpp  RenderThreadPool.h  SupportThreadPool.cpp  SupportThreadPool.h  ThreadPoolCall.cpp  ThreadPoolCall.h  ThreadPools.cpp  ThreadPools.h  UpdateThreadPool.cpp  UpdateThreadPool.h
src/executors/queues/: IQueue.h  LifoBoundedMPSCBlockingQueue.cpp  LifoBoundedMPSCBlockingQueue.h
src/gui/: Gui.h  PushButton.h
src/io/: Camera.cpp  Camera.h  Cursor.cpp  Cursor.h  InputHandler.cpp  InputHandler.h  KeyboardKeys.h  Monitor.cpp  Monitor.h  MonitorController.h  MonitorInfo.cpp  MonitorInfo.h  MonitorsInfo.h  Window.cpp  Window.h
src/loader/: AssetBase.h  AssetInstanceInfo.h  AudioData.h  IAsset.h  IAssetPool.h  Image.cpp  Image.h  LoadPathManager.h  Model.h  ModelPool.cpp  ModelPool.h  Music.cpp  Music.h  MusicPool.cpp  MusicPool.h  ResourceManager.h  ShaderObject.cpp  ShaderObject.h  ShaderObjectPool.cpp  ShaderObjectPool.h  ShaderPool.cpp  ShaderPool.h  ShaderProgram-inl.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramShaders.h  Sound.cpp  Sound.h  SoundPool.cpp  SoundPool.h  Sprite.cpp  Sprite.h  StaticBinLoader.cpp  StaticBinLoader.h  Texture.cpp  Texture.h  Texture1D.cpp  Texture1D.h  Texture1DPool.cpp  Texture1DPool.h  (+6 more)
src/loader/assets_data/: ModelData.cpp  ModelData.h  MusicData.h  ShaderObjectData.h  ShaderObjectData.h.cpp  ShaderProgramData.cpp  ShaderProgramData.h  SoundData.h  TextureData.cpp  TextureData.h  Why.md
src/loader/model/: AnimatableModel.cpp  AnimatableModel.h  Common.cpp  Common.h  CreatureModel.h  CreatureModelPools.h  FurnitureModel.h  FurnitureModelPools.h  ImmovableModel.h  ImmovableModelPools.h  ModelBase.h  NonAnimatableModel.cpp  NonAnimatableModel.h
src/modules/: AudioModule.cpp  AudioModule.h  CollisionModule.cpp  CollisionModule.h  DrawButtonsSubmodule.cpp  DrawButtonsSubmodule.h  DrawModule.cpp  DrawModule.h  DrawTextSubmodule.cpp  DrawTextSubmodule.h  InputModule.cpp  InputModule.h  LoadingModule.cpp  LoadingModule.h  UpdatingModule.cpp  UpdatingModule.h
src/physics/: RigidBody.h
src/player/: PlayerCharacter.h
test/: CMakeLists.txt
test/test_assets/: main.cpp
test/test_external/: CMakeLists.txt  README.md  test_astc-encoder.cpp  test_glad.cpp
test/test_src/: CMakeLists.txt  README.md  main.cpp
test/test_utils/: CMakeLists.txt  README.md  main.cpp
utils/: .clang-tidy  Allocator.h  Buffer.h  CMakeLists.txt  CacheBuffer.h  ConstexprVector.h  Executor.cpp  Executor.h  Experimental.h  FastMath.h  Function.h  Iterator.h  Logger.cpp  Logger.h  Span.h  SystemInfo.h  ThreadPoolCall.cpp  ThreadPoolCall.h  ThreadPools.cpp  ThreadPools.h
utils/AssetDownloader/: CMakeLists.txt  README.md  main.cpp
utils/AssetPack/: CMakeLists.txt  main.cpp
utils/AssetProcessor/: AssetCategory.cpp  AssetCategory.h  AssetInfo.h  AssetLoadingThreadPool.cpp  AssetLoadingThreadPool.h  AssetProcessor.cpp  AssetProcessor.h  AssetsAnalyzer.cpp  AssetsAnalyzer.h  AudioProcessor.cpp  AudioProcessor.h  CMakeLists.txt  IMPORTANT.md  ImageProcessor.h  ModelProcessor.cpp  ModelProcessor.h  ReplaceRequest.h  TextureProcessor.cpp  TextureProcessor.h  main.cpp
utils/AssetProcessor/deprecated/: AnimationNode.cpp  AnimationNode.h  Image.cpp  Image.h  LoadPathManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  RunningAnimation.cpp  RunningAnimation.h  StaticBinLoader.cpp  StaticBinLoader.h
utils/Executors/: Executor.h  ThreadPools.cpp
utils/executors/: ThreadPoolCall.cpp  ThreadPoolCall.h  ThreadPools.cpp  ThreadPools.h
(+67 files in other folders)
